--- a/example_code/test_yfinance.ipynb
+++ b/example_code/test_yfinance.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "from pandas_datareader import data as pdr\n",
     "import yfinance as yf \n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
